fixed responsive design on small devices

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -32,3 +32,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media only screen and (max-width: 768px) {
+  .mainBorder:before {
+    content: none;
+  }
+}
